--- a/alura-store/assets/css/style.css
+++ b/alura-store/assets/css/style.css
@@ -6,17 +6,26 @@
         "conteudo"
         "rodape";
     grid-template-columns: auto;
-    grid-template-rows: 50px 100vh 50px;
+    grid-template-rows: 50px auto auto;
 }
 
 .cabecalho {
+   display: flex; 
+   align-items: center;
+   padding: 0 2rem;
    grid-area: cabecalho;
 }
  
 .conteudo {
     grid-area: conteudo;
+    padding: 0 2rem;
 }
 
 .rodape {
     grid-area: rodape;
+    background: #fdfdfd;
+    color:#333333;
+    font-size: .8rem;
+    padding: 1rem;
+    text-align: center;
 }
